tests/errors/moveInLoop.milo
// @error: cannot move 's' out of a loop

fn consume(s: string): void {
}

fn main(): i32 {
    let s: string = "hello"
    var i: i32 = 0
    while i < 3 {
        consume(s)
        i = i + 1
    }
    return 0
}

